cluster/apps/development/pocketbase/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pocketbase
  namespace: development
spec:
  selector:
    app: pocketbase
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8090
